--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,9 @@
 	--foreground: #8892b0;
 	--background: #0a192f;
 	--green: #64ffda;
+	--transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+	--tab-height: 52px;
+	--lightest-navy: #233554;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,5 +26,94 @@ body {
 @layer utilities {
 	.text-balance {
 		text-wrap: balance;
+	}
+}
+
+.mn-inline-link {
+	display: inline-block;
+	transition: var(--transition);
+}
+
+.mn-inline-link::after {
+	content: '';
+	display: block;
+	height: 1px;
+	background-color: var(--green);
+	width: 0px;
+	transition: var(--transition);
+}
+
+.mn-inline-link:hover::after {
+	width: 100%;
+}
+
+.mn-social-handle__list::after {
+	content: '';
+	display: block;
+	width: 1px;
+	height: 80px;
+	background-color: var(--foreground);
+}
+
+.mn-social-handle__list li:last-child {
+	margin-bottom: 2rem;
+}
+
+.mn-btn-link {
+	color: var(--green);
+	border: 1px solid var(--green);
+	padding: 10px 20px;
+	border-radius: 6px;
+}
+.mn-green-arrow li {
+	position: relative;
+	padding-left: 20px;
+}
+
+.mn-green-arrow li::before {
+	content: '▹';
+	position: absolute;
+	left: 0px;
+	top: 5px;
+	color: var(--green);
+	line-height: 12px;
+	font-size: 14px;
+}
+
+.tablist {
+	position: relative;
+}
+
+.tablist button {
+	width: fit-content;
+	padding: 0px 1.5rem;
+	border-left: 1px solid var(--lightest-navy);
+	height: var(--tab-height);
+	transition: all 150ms cubic-bezier(0.165, 0.84, 0.44, 1);
+	text-align: left;
+}
+
+.tablist button:hover {
+	background-color: var(--lightest-navy);
+}
+
+.tablist .tablist_selected {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 2px;
+	border-radius: 10px;
+	background-color: #64ffda;
+	height: var(--tab-height);
+	transition: transform 300ms ease-in-out;
+}
+
+@keyframes smooth-tab-list {
+	0% {
+		top: -50px;
+	}
+
+	100% {
+		top: 0px;
 	}
 }
