--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,8 +63,15 @@ body {
 	color: var(--green);
 	border: 1px solid var(--green);
 	padding: 10px 20px;
-	border-radius: 6px;
+	border-radius: 4px;
+	transition: var(--transition);
 }
+
+.mn-btn-link:hover {
+	box-shadow: 4px 4px 0px 0px var(--green);
+	transform: translate(-5px, -5px);
+}
+
 .mn-green-arrow li {
 	position: relative;
 	padding-left: 20px;
@@ -108,12 +115,42 @@ body {
 	transition: transform 300ms ease-in-out;
 }
 
-@keyframes smooth-tab-list {
-	0% {
-		top: -50px;
-	}
+.mn-img-green-tint img {
+	mix-blend-mode: multiply;
+	filter: grayscale(100%) contrast(1);
+	transition: var(--transition);
+}
 
-	100% {
-		top: 0px;
-	}
+.mn-img-green-tint {
+	background-color: var(--green);
+	position: relative;
+	max-width: 250px;
+	max-height: 250px;
+	transition: var(--transition);
+}
+
+.mn-img-green-tint:hover {
+	transform: translate(-4px, -4px);
+}
+
+.mn-img-green-tint img:hover {
+	filter: none;
+	mix-blend-mode: normal;
+}
+
+.mn-img-green-tint::after {
+	content: '';
+	display: block;
+	border: 2px solid var(--green);
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 14px;
+	left: 14px;
+	z-index: -1;
+	transition: var(--transition);
+}
+
+.mn-img-green-tint:hover::after {
+	transform: translate(10px, 10px);
 }
