--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@ html {
 	--transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 	--tab-height: 52px;
 	--tab-width: 140px;
+	--light-navy: #112240;
 	--lightest-navy: #233554;
 }
 
@@ -159,6 +160,80 @@ body {
 
 .mn-img-green-tint:hover::after {
 	transform: translate(10px, 10px);
+}
+
+.hamburger-menu {
+	position: relative;
+	width: 30px;
+	height: 24px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.hamburger-menu_line {
+	width: 100%;
+	height: 2px;
+	border-radius: 10px;
+	background-color: var(--green);
+	transition-duration: 0.22s;
+	transition-property: transform;
+	transition-delay: 0.12s;
+	transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.hamburger-menu_line::before {
+	content: '';
+	display: block;
+	position: absolute;
+	height: 2px;
+	background-color: var(--green);
+	top: 0px;
+	width: 120%;
+	right: 0px;
+	transition: top 0.1s ease-out, width 0.1s ease-out, transform 0.1s ease-out,
+		opacity 0.1s ease-out 0.12s;
+}
+
+.hamburger-menu_line::after {
+	content: '';
+	display: block;
+	position: absolute;
+	height: 2px;
+	background-color: var(--green);
+	bottom: 0px;
+	width: 80%;
+	right: 0px;
+	transition: bottom 0.1s ease-out, width 0.1s ease-out,
+		transform 0.1s ease-out, opacity 0.1s ease-out 0.12s;
+}
+
+.hamburger-menu_line.close-icon {
+	transform: rotate(225deg);
+}
+
+.hamburger-menu_line.close-icon::before {
+	width: 100%;
+}
+
+.hamburger-menu_line.close-icon::before {
+	width: 100%;
+	transform: rotate(90deg);
+}
+
+.side-menu {
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 80%;
+	background-color: var(--light-navy);
+	transition: transform 0.2s ease-in-out;
+	top: 0px;
+	bottom: 0px;
+	right: 0px;
+	padding: 40px;
+	/* transform: translateX(100%); */
 }
 
 @media (max-width: 768px) {
