--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -233,7 +233,7 @@ body {
 	bottom: 0px;
 	right: 0px;
 	padding: 40px;
-	/* transform: translateX(100%); */
+	height: 100vh;
 }
 
 @media (max-width: 768px) {
